Small code quality fix- replacing Stream.collect(Collectors.toList()) to Stream.toList()