@@ -1,7 +1,6 @@
 package com.aishwarya.ethical.transparency_portal.exception_handling;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
@@ -11,6 +10,6 @@ public final class ValidationUtils {
 
 	public static List<FieldErrorDetail> fromBindingErrors(MethodArgumentNotValidException ex) {
 		return ex.getBindingResult().getFieldErrors().stream()
-				.map(f -> new FieldErrorDetail(f.getField(), f.getDefaultMessage())).collect(Collectors.toList());
+				.map(f -> new FieldErrorDetail(f.getField(), f.getDefaultMessage())).toList();
 	}
 }
